# OpenRig

./: .dev-rules.json  .gitignore  .gitmodules  .qg.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.es-ES.md  README.md  README.pt-BR.md  clippy.toml  config.yaml  preset.yaml  project.yaml  setup.yaml  state.yaml
cpp/: CMakeLists.txt  nam_tone_stack.cpp  nam_tone_stack.h  nam_wrapper.cpp  nam_wrapper.h
crates/adapter-console/: Cargo.toml
crates/adapter-console-rig/: Cargo.toml
crates/adapter-console-rig/src/: main.rs
crates/adapter-console/src/: main.rs
crates/adapter-gui/: Cargo.toml  build.rs
crates/adapter-gui/examples/: graph_view_demo.rs
crates/adapter-gui/locales/: de-DE.yml  en-US.yml  es-ES.yml  fr-FR.yml  hi-IN.yml  ja-JP.yml  ko-KR.yml  pt-BR.yml  zh-CN.yml
crates/adapter-gui/src/: app.rs  audio_devices.rs  audio_devices_tests.rs  audio_settings_save_wiring.rs  audio_wizard_wiring.rs  back_to_launcher_wiring.rs  bank_scene_navigator_wiring.rs  bank_scene_render.rs  bank_scene_render_tests.rs  bank_scene_session.rs  bank_scene_session_tests.rs  block_choose_type_callback.rs  block_delete_wiring.rs  block_drawer_close_wiring.rs  block_drawer_save_delete_wiring.rs  block_drawer_toggle_enabled.rs  block_drawer_toggle_enabled_tests.rs  block_editor.rs  block_editor_choose_model.rs  block_editor_choose_model_tests.rs  block_editor_param_items.rs  block_editor_param_items_tests.rs  block_editor_param_tabs.rs  block_editor_persist.rs  block_editor_setters.rs  block_editor_tests.rs  block_editor_values.rs  block_editor_window_delete.rs  block_editor_window_lifecycle.rs  block_editor_window_params.rs  block_editor_window_setup.rs  block_editor_window_wiring.rs  block_insert_callbacks.rs  block_model_search_wiring.rs  block_panel_dimensions.rs  block_panel_dimensions_tests.rs  block_parameter_extras.rs  block_parameter_wiring.rs  block_picker_wiring.rs  block_window_param_apply.rs  (+181 more)
crates/adapter-gui/tests/: chain_binding_choices.rs  chain_row_height_grows_with_streams.rs  chain_row_meters_stack_upward.rs  chain_row_per_stream_full_row.rs  chain_row_stacks_stream_meters.rs  compact_preset_switch_refreshes_blocks.rs  issue_14_metronome_interaction.rs  issue_323_looper_panel_interaction.rs  issue_323_looper_wiring.rs  issue_540_set_paths_persists.rs  issue_544_tuner_close_dispatches_disable.rs  issue_546_spectrum_close_dispatches_disable.rs  issue_552_render_dispatch.rs  issue_581_audio_row_toggle_does_not_block_combobox.rs  issue_581_save_audio_settings_persists_to_openrig.rs  issue_582_set_evaluations_path_persists.rs  issue_599_block_type_picker_includes_ir_nam.rs  issue_607_path_override_survives_whole_config_resave.rs  issue_613_compact_view.rs  issue_614_compact_di_loop_wiring.rs  issue_614_di_loop_play_applies_to_runtime.rs  issue_614_di_loop_ui_sources.rs  issue_614_di_loop_wiring.rs  issue_622_model_pick_resizes_window.rs  issue_627_buffer_survives_whole_config_resave.rs  issue_661_di_loop_file_source.rs  issue_661_di_loop_selected_index.rs  issue_669_di_loop_resamples_to_device_rate.rs  issue_693_nonblocking_logger.rs  issue_712_subsystem_toggle_wiring.rs  issue_716_binding_persistence.rs  issue_716_checklist_reflects_saved_binding.rs  issue_716_reopened_chain_builds_runtime.rs  issue_716_started_chain_produces_audio.rs  issue_717_compact_di_panel_opens.rs  issue_721_ui_stall_watchdog.rs  issue_743_disable_no_io_resolve.rs  issue_749_di_loop_popup_interaction.rs  issue_761_compact_rvb_model_select.rs  issue_761_compact_view_model_select_end_to_end.rs  (+12 more)
crates/adapter-gui/translations/: adapter-gui.pot
crates/adapter-gui/ui/: app-window.slint  desktop_main.slint  locale_globals.slint  models.slint  preset_picker_globals.slint  secondary_windows_block.slint  secondary_windows_chain.slint  theme.slint  touch_main.slint
crates/adapter-mcp/: Cargo.toml
crates/adapter-mcp/src/: lib.rs  prompts.rs  render_tool.rs  resources.rs  resources_tests.rs  server.rs  tools.rs  tools_tests.rs
crates/adapter-mcp/tests/: block_params_resource.rs  paths_resource.rs  plugin_params_resource.rs  render_chain_tool.rs
crates/adapter-midi/: Cargo.toml
crates/adapter-midi/src/: daemon.rs  daemon_tests.rs  enumerate.rs  enumerate_tests.rs  learn.rs  learn_tests.rs  lib.rs  mapping.rs  mapping_tests.rs  message.rs  message_tests.rs  pipeline.rs  profile.rs  resolve.rs  resolve_tests.rs  slots.rs  translate.rs  translate_tests.rs
crates/adapter-midi/tests/: asset_chocolate_plus_pc_a_test.rs  bundled_profiles_test.rs  dispatch_integration_test.rs  dispatch_to_bridge_test.rs  hotplug_test.rs  incoming_from_bytes_test.rs  issue_14_metronome_slots.rs  issue_323_looper_footswitch.rs  issue_591_footswitch_follows_selected_chain.rs  list_input_ports_no_cache_test.rs  match_pipeline_test.rs  neighbor_block_slot_test.rs  profile_dir_loader_test.rs  profile_test.rs  rescan_signal_test.rs  scan_with_retry_test.rs  slot_dispatch_test.rs  slot_remaining_test.rs  slot_toggles_test.rs
crates/adapter-render/: Cargo.toml
crates/adapter-render/src/: capture.rs  cli.rs  lib.rs  main.rs  wav.rs
crates/adapter-render/tests/: issue_552_binary_entry.rs  issue_552_render_args.rs  issue_552_render_engine.rs  issue_552_render_passthrough.rs  issue_552_wav_io.rs  (+1 more)
crates/application/: Cargo.toml
crates/block-amp/: Cargo.toml  build.rs
crates/block-gain/: Cargo.toml  build.rs
crates/block-reverb/: Cargo.toml  build.rs
crates/block-wah/: Cargo.toml  build.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  (+111 more)
crates/feature-stems/: Cargo.toml
crates/graphview-demo/: Cargo.toml
crates/infra-cpal/: Cargo.toml
crates/infra-yaml/: Cargo.toml
crates/lv2/: Cargo.toml
crates/pedal-adapter-console/: Cargo.toml
crates/pedal-infra-yaml/: Cargo.toml
crates/project/: Cargo.toml
crates/setup/: Cargo.toml
crates/tone-calibrate/: Cargo.toml
crates/vst3/: Cargo.toml
crates/vst3-proc/: Cargo.toml
tools/lv2_catalog_import/: Cargo.toml  cross_platform_map.yaml  overrides.yaml
tools/nam_loudness_audit/: Cargo.toml
tools/slint-render/: Cargo.toml
(+3382 files in other folders)
