[workspace]
members = [
  "crates/domain",
  "crates/application",
  "crates/engine",
  "crates/ports",
  "crates/setup",
  "crates/preset",
  "crates/state",
  "crates/stage-core",
  "crates/stage-gain",
  "crates/stage-dyn",
  "crates/stage-filter",
  "crates/stage-mod",
  "crates/stage-delay",
  "crates/stage-reverb",
  "crates/stage-pitch",
  "crates/stage-util",
  "crates/stage-routing",
  "crates/nam",
  "crates/stage-nam",
  "crates/stage-amp-head",
  "crates/stage-amp-combo",
  "crates/stage-full-rig",
  "crates/stage-cab",
  "crates/ui-openrig",
  "crates/infra-yaml",
  "crates/infra-filesystem",
  "crates/infra-cpal",
  "crates/adapter-console",
  "crates/adapter-server",
  "crates/adapter-gui",
  "crates/adapter-vst3",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["João Paulo"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "6"
thiserror = "1"
cpal = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.12"
prost = "0.13"
uuid = { version = "1", features = ["v4", "serde"] }
arc-swap = "1.7"
egui = "0.31"
eframe = { version = "0.31", default-features = true }
