[workspace]
members = [
  "crates/domain",
  "crates/application",
  "crates/engine",
  "crates/project",
  "crates/block-core",
  "crates/block-gain",
  "crates/block-dyn",
  "crates/block-filter",
  "crates/block-mod",
  "crates/block-delay",
  "crates/block-reverb",
  "crates/block-pitch",
  "crates/block-util",
  "crates/block-routing",
  "crates/asset-runtime",
  "crates/nam",
  "crates/block-nam",
  "crates/block-preamp",
  "crates/block-amp",
  "crates/block-full-rig",
  "crates/block-cab",
  "crates/block-body",
  "crates/lv2",
  "crates/ir",
  "crates/block-ir",
  "crates/block-wah",
  "crates/block-thumbnails",
  "crates/ui-openrig",
  "crates/infra-yaml",
  "crates/infra-filesystem",
  "crates/infra-cpal",
  "crates/adapter-console",
  "crates/adapter-server",
  "crates/adapter-gui",
  "crates/adapter-vst3",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["João Paulo"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "6"
thiserror = "1"
cpal = "0.17.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.12"
prost = "0.13"
uuid = { version = "1", features = ["v4", "serde"] }
arc-swap = "1.7"
slint = "1.14"
slint-build = "1.14"
log = "0.4"
env_logger = "0.11"
