[workspace]
members = [
  "crates/domain",
  "crates/application",
  "crates/engine",
  "crates/project",
  "crates/block-core",
  "crates/block-gain",
  "crates/block-dyn",
  "crates/block-filter",
  "crates/block-mod",
  "crates/block-delay",
  "crates/block-reverb",
  "crates/block-pitch",
  "crates/block-util",
  "crates/block-routing",
  "crates/feature-dsp",
  "crates/nam",
  "crates/block-nam",
  "crates/block-preamp",
  "crates/block-amp",
  "crates/block-full-rig",
  "crates/block-cab",
  "crates/block-body",
  "crates/lv2",
  "crates/ir",
  "crates/block-ir",
  "crates/block-wah",
  "crates/plugin-loader",
  "crates/ui-openrig",
  "crates/infra-yaml",
  "crates/infra-filesystem",
  "crates/infra-cpal",
  "crates/adapter-console",
  "crates/adapter-console-rig",
  "crates/adapter-server",
  "crates/adapter-mcp",
  "crates/adapter-midi",
  "crates/adapter-gui",
  "crates/adapter-vst3",
  "crates/adapter-render",
  "crates/vst3-host",
]
# Dev-only headless Slint renderer (PNG screenshots for UI review). Excluded:
# it pins slint-interpreter at its own version and must not enter the app build.
exclude = ["tools/slint-render"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["João Paulo"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "6"
thiserror = "1"
cpal = { version = "0.17.3", features = ["asio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
serde_json = "1"
rmcp = { version = "1.7.0", features = ["server", "transport-streamable-http-server"] }
midir = "0.11"
tonic = "0.12"
prost = "0.13"
uuid = { version = "1", features = ["v4", "serde"] }
arc-swap = "1.7"
crossbeam-queue = "0.3"
slint = { version = "1.16", default-features = false, features = ["std", "compat-1-2"] }
slint-build = "1.16"
log = "0.4"
env_logger = "0.11"
rustfft = "6"
webbrowser = "1.0"
schemars = "0.8"

# Issue #670 — keep the AUDIO path optimized in dev builds. Unoptimized Rust
# DSP is 10-40x slower; the live rig's per-buffer cost then blows the 64-frame
# budget (measured: 2601 late buffers/30 s in dev vs 1/45 s in release on the
# same rig) — the "picotado" sound when running from the IDE's default run
# button. Dependencies and the DSP crates compile optimized even in dev; the
# app-layer crates (adapter-*, application, project, ui) stay unoptimized for
# fast iteration.
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.engine]
opt-level = 3
[profile.dev.package.ir]
opt-level = 3
[profile.dev.package.nam]
opt-level = 3
[profile.dev.package.lv2]
opt-level = 3
[profile.dev.package.infra-cpal]
opt-level = 3
[profile.dev.package.block-core]
opt-level = 3
[profile.dev.package.block-util]
opt-level = 3
[profile.dev.package.block-amp]
opt-level = 3
[profile.dev.package.block-body]
opt-level = 3
[profile.dev.package.block-cab]
opt-level = 3
[profile.dev.package.block-delay]
opt-level = 3
[profile.dev.package.block-dyn]
opt-level = 3
[profile.dev.package.block-filter]
opt-level = 3
[profile.dev.package.block-full-rig]
opt-level = 3
[profile.dev.package.block-gain]
opt-level = 3
[profile.dev.package.block-ir]
opt-level = 3
[profile.dev.package.block-mod]
opt-level = 3
[profile.dev.package.block-nam]
opt-level = 3
[profile.dev.package.block-pitch]
opt-level = 3
[profile.dev.package.block-preamp]
opt-level = 3
[profile.dev.package.block-reverb]
opt-level = 3
[profile.dev.package.block-routing]
opt-level = 3
[profile.dev.package.block-wah]
opt-level = 3
[profile.dev.package.feature-dsp]
opt-level = 3
