[package]
name = "adapter-console"
version.workspace = true
edition.workspace = true
[dependencies]
anyhow.workspace = true
cpal.workspace = true
serde.workspace = true
serde_yaml.workspace = true
application = { path = "../application" }
adapter-mcp = { path = "../adapter-mcp" }
adapter-midi = { path = "../adapter-midi" }
engine = { path = "../engine" }
infra-cpal = { path = "../infra-cpal" }
infra-filesystem = { path = "../infra-filesystem" }
infra-yaml = { path = "../infra-yaml" }
project = { path = "../project" }
