[package]
name = "adapter-gui"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
application = { path = "../application" }
block-core = { path = "../block-core" }
image = { version = "0.25", default-features = false, features = ["png"] }
cpal = "0.17"
domain = { path = "../domain" }
engine = { path = "../engine" }
feature-dsp = { path = "../feature-dsp" }
infra-cpal = { path = "../infra-cpal" }
infra-filesystem = { path = "../infra-filesystem" }
infra-yaml = { path = "../infra-yaml" }
serde.workspace = true
serde_yaml.workspace = true
rfd = "0.15"
# Base slint without backend-linuxkms (Linux-only) and without gettext
# (libintl is not portably available — gated to Linux below). Bundled
# translations via slint::select_bundled_translation still work cross-platform.
slint = { workspace = true, features = ["renderer-femtovg"] }
log.workspace = true
env_logger.workspace = true
project = { path = "../project" }
ui-openrig = { path = "../ui-openrig" }
webbrowser.workspace = true
sys-locale = "0.3"
rust-i18n = "3"

# Linux gets the KMS backend, Slint runtime gettext, and gettext-rs (which
# pulls gettext-sys + libintl). On Windows/macOS this whole block is dropped
# so we don't try to autoconf-build gettext where it isn't natively present.
[target.'cfg(target_os = "linux")'.dependencies]
slint = { workspace = true, features = ["backend-linuxkms", "gettext"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }

[target.'cfg(target_os = "linux")'.dependencies.infra-cpal]
path = "../infra-cpal"
features = ["jack"]

[build-dependencies]
slint-build.workspace = true
