[package]
name = "adapter-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
application = { path = "../application" }
project = { path = "../project" }
infra-yaml = { path = "../infra-yaml" }
infra-cpal = { path = "../infra-cpal" }
serde_json.workspace = true
futures.workspace = true
rmcp.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
schemars.workspace = true
