[package]
name = "adapter-midi"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
application = { path = "../application" }
infra-filesystem = { path = "../infra-filesystem" }
project = { path = "../project" }
serde = { workspace = true }
serde_yaml.workspace = true
serde_json.workspace = true
midir.workspace = true
log.workspace = true
