[package]
name = "adapter-render"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
hound = "3.5"
cpal.workspace = true
log.workspace = true
application = { path = "../application" }
domain = { path = "../domain" }
engine = { path = "../engine" }
infra-filesystem = { path = "../infra-filesystem" }
infra-yaml = { path = "../infra-yaml" }
plugin-loader = { path = "../plugin-loader" }
project = { path = "../project" }

[[bin]]
name = "openrig-render"
path = "src/main.rs"
