[package]
name = "application"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
futures.workspace = true
project = { path = "../project" }
engine = { path = "../engine" }
block-core = { path = "../block-core" }
domain = { path = "../domain" }
plugin-loader = { path = "../plugin-loader" }

[dev-dependencies]
block-delay = { path = "../block-delay" }
block-reverb = { path = "../block-reverb" }
serde_yaml.workspace = true
