[package]
name = "application"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
futures.workspace = true
project = { path = "../project" }
engine = { path = "../engine" }
block-core = { path = "../block-core" }
domain = { path = "../domain" }
infra-filesystem = { path = "../infra-filesystem" }
infra-yaml = { path = "../infra-yaml" }
plugin-loader = { path = "../plugin-loader" }
adapter-render = { path = "../adapter-render" }

[dev-dependencies]
block-core = { path = "../block-core" }
block-delay = { path = "../block-delay" }
block-reverb = { path = "../block-reverb" }
hound = "3.5"
serde_yaml.workspace = true
tempfile = "3"
