[package]
name = "application"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
schemars.workspace = true
futures.workspace = true
# #323: the recorded loop is written as a wav sidecar next to the project.
hound = "3.5"
project = { path = "../project" }
engine = { path = "../engine" }
block-core = { path = "../block-core" }
domain = { path = "../domain" }
infra-filesystem = { path = "../infra-filesystem" }
infra-yaml = { path = "../infra-yaml" }
plugin-loader = { path = "../plugin-loader" }
adapter-render = { path = "../adapter-render" }

[dev-dependencies]
block-core = { path = "../block-core" }
block-delay = { path = "../block-delay" }
block-reverb = { path = "../block-reverb" }
serde_yaml.workspace = true
tempfile = "3"
# #780 end-to-end test: drive a real VST3 controller + register its context.
vst3-host = { path = "../vst3-host" }
