[package]
name = "block-gain"
version.workspace = true
edition.workspace = true
[dependencies]
anyhow.workspace = true
nam = { path = "../nam" }
lv2 = { path = "../lv2" }
vst3-host = { path = "../vst3" }
block-core = { path = "../block-core" }
plugin-loader = { path = "../plugin-loader" }
log.workspace = true

[dev-dependencies]
domain = { path = "../domain" }
