[package]
name = "engine"
version.workspace = true
edition.workspace = true
[dependencies]
anyhow.workspace = true
domain = { path = "../domain" }
stage-core = { path = "../stage-core" }
stage-gain = { path = "../stage-gain" }
stage-delay = { path = "../stage-delay" }
stage-mod = { path = "../stage-mod" }
stage-filter = { path = "../stage-filter" }
stage-dyn = { path = "../stage-dyn" }
stage-nam = { path = "../stage-nam" }
stage-amp-head = { path = "../stage-amp-head" }
stage-amp-combo = { path = "../stage-amp-combo" }
stage-full-rig = { path = "../stage-full-rig" }
stage-reverb = { path = "../stage-reverb" }
stage-util = { path = "../stage-util" }
setup = { path = "../setup" }
state = { path = "../state" }
