[package]
name = "engine"
version.workspace = true
edition.workspace = true
[dependencies]
anyhow.workspace = true
domain = { path = "../domain" }
block-core = { path = "../block-core" }
block-gain = { path = "../block-gain" }
block-delay = { path = "../block-delay" }
block-mod = { path = "../block-mod" }
block-filter = { path = "../block-filter" }
block-dyn = { path = "../block-dyn" }
block-nam = { path = "../block-nam" }
block-amp-head = { path = "../block-amp-head" }
block-amp-combo = { path = "../block-amp-combo" }
block-full-rig = { path = "../block-full-rig" }
block-cab = { path = "../block-cab" }
block-ir = { path = "../block-ir" }
block-wah = { path = "../block-wah" }
block-reverb = { path = "../block-reverb" }
block-util = { path = "../block-util" }
project = { path = "../project" }
