[package]
name = "engine"
version.workspace = true
edition.workspace = true
[dependencies]
log.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
crossbeam-queue.workspace = true
domain = { path = "../domain" }
block-core = { path = "../block-core" }
nam = { path = "../nam" }
ir = { path = "../ir" }
lv2 = { path = "../lv2" }
block-gain = { path = "../block-gain" }
block-delay = { path = "../block-delay" }
block-mod = { path = "../block-mod" }
block-filter = { path = "../block-filter" }
block-dyn = { path = "../block-dyn" }
block-nam = { path = "../block-nam" }
block-preamp = { path = "../block-preamp" }
block-amp = { path = "../block-amp" }
block-full-rig = { path = "../block-full-rig" }
block-cab = { path = "../block-cab" }
block-body = { path = "../block-body" }
block-ir = { path = "../block-ir" }
block-wah = { path = "../block-wah" }
block-pitch = { path = "../block-pitch" }
block-reverb = { path = "../block-reverb" }
block-util = { path = "../block-util" }
project = { path = "../project" }
vst3-host = { path = "../vst3" }
plugin-loader = { path = "../plugin-loader" }

[dev-dependencies]
domain = { path = "../domain" }
nam = { path = "../nam" }
ir = { path = "../ir" }
block-core = { path = "../block-core" }
# Issue #592: load the user's real preset files through the production
# parser (infra-yaml) to prove the load path produces the same audio as
# the canonical in-memory chain. infra-yaml does not depend on engine.
infra-yaml = { path = "../infra-yaml" }
# Issue #496: objective LUFS measurement (Spotify standard) so the
# bare engine signal path can be compared against a reference instead
# of judged by ear. Dev-only — not on the audio thread.
ebur128 = "0.1"
rustfft = { workspace = true }

