[package]
name = "feature-stems"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
feature-tracks = { path = "../feature-tracks" }
hound = "3"
lofty = "0.21"
rubato = "0.16"
sha2 = "0.10"
ureq = { version = "2", default-features = false, features = ["tls"] }
symphonia = { version = "0.5", default-features = false, features = [
  "wav",
  "pcm",
  "mp3",
  "flac",
  "ogg",
  "vorbis",
  "isomp4",
  "aac",
] }

[dev-dependencies]
hound = "3"
tempfile = "3"
