[package]
name = "feature-stems"
version.workspace = true
edition.workspace = true

[features]
default = []
real-htdemucs = ["dep:ort", "dep:ort-sys", "dep:ndarray"]

[dependencies]
thiserror.workspace = true
dirs.workspace = true
feature-tracks = { path = "../feature-tracks" }
hound = "3"
lofty = "0.21"
rubato = "0.16"
sha2 = "0.10"
ureq = { version = "2", default-features = false, features = ["tls"] }
ort = { version = "=2.0.0-rc.10", optional = true, default-features = false, features = ["std", "load-dynamic", "ndarray"] }
ort-sys = { version = "=2.0.0-rc.10", optional = true }
ndarray = { version = "0.16", optional = true }
symphonia = { version = "0.5", default-features = false, features = [
  "wav",
  "pcm",
  "mp3",
  "flac",
  "ogg",
  "vorbis",
  "isomp4",
  "aac",
] }

[dev-dependencies]
hound = "3"
tempfile = "3"
