[package]
name = "graphview-demo"
version.workspace = true
edition.workspace = true

# Standalone visual demo for the GraphView component. Deliberately a
# separate crate so adapter-gui never builds demo code (CI / release).

[dependencies]
adapter-gui = { path = "../adapter-gui" }
slint = { workspace = true, features = ["backend-default", "renderer-femtovg"] }
log.workspace = true
env_logger.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
slint = { workspace = true, features = ["backend-linuxkms", "gettext"] }
