[package]
name = "infra-cpal"
version.workspace = true
edition.workspace = true

[features]
jack = ["cpal/jack", "dep:jack"]

[dependencies]
log.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
cpal.workspace = true
jack = { version = "0.13", optional = true }

domain = { path = "../domain" }
engine = { path = "../engine" }
block-util = { path = "../block-util" }
block-core = { path = "../block-core" }
project = { path = "../project" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# Issue #670: thread CPU-time clock + real-time scheduling on macOS.
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
mach2 = "0.5"
