[package]
name = "infra-yaml"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
domain = { path = "../domain" }
project = { path = "../project" }
stage-nam = { path = "../stage-nam" }
stage-amp-head = { path = "../stage-amp-head" }
stage-amp-combo = { path = "../stage-amp-combo" }
stage-full-rig = { path = "../stage-full-rig" }
stage-gain = { path = "../stage-gain" }
stage-delay = { path = "../stage-delay" }
stage-dyn = { path = "../stage-dyn" }
stage-filter = { path = "../stage-filter" }
stage-mod = { path = "../stage-mod" }
stage-reverb = { path = "../stage-reverb" }
stage-util = { path = "../stage-util" }
