[package]
name = "infra-yaml"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
domain = { path = "../domain" }
project = { path = "../project" }
block-nam = { path = "../block-nam" }
block-amp-head = { path = "../block-amp-head" }
block-amp-combo = { path = "../block-amp-combo" }
block-full-rig = { path = "../block-full-rig" }
block-cab = { path = "../block-cab" }
block-gain = { path = "../block-gain" }
block-delay = { path = "../block-delay" }
block-dyn = { path = "../block-dyn" }
block-filter = { path = "../block-filter" }
block-mod = { path = "../block-mod" }
block-reverb = { path = "../block-reverb" }
block-util = { path = "../block-util" }

[dev-dependencies]
tempfile = "3"
