[package]
name = "infra-yaml"
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
block-core = { path = "../block-core" }
domain = { path = "../domain" }
project = { path = "../project" }
block-nam = { path = "../block-nam" }
block-preamp = { path = "../block-preamp" }
block-amp = { path = "../block-amp" }
block-full-rig = { path = "../block-full-rig" }
block-cab = { path = "../block-cab" }
block-body = { path = "../block-body" }
block-ir = { path = "../block-ir" }
block-gain = { path = "../block-gain" }
block-delay = { path = "../block-delay" }
block-dyn = { path = "../block-dyn" }
block-filter = { path = "../block-filter" }
block-wah = { path = "../block-wah" }
block-pitch = { path = "../block-pitch" }
block-mod = { path = "../block-mod" }
block-reverb = { path = "../block-reverb" }
block-util = { path = "../block-util" }

[dev-dependencies]
tempfile = "3"
