[package]
name = "pedal-infra-yaml"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
pedal-domain = { path = "../pedal-domain" }
pedal-preset = { path = "../pedal-preset" }
pedal-setup = { path = "../pedal-setup" }
pedal-state = { path = "../pedal-state" }
pedal-ports = { path = "../pedal-ports" }
