[package]
name = "project"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
domain = { path = "../domain" }
stage-core = { path = "../stage-core" }
stage-gain = { path = "../stage-gain" }
stage-delay = { path = "../stage-delay" }
stage-reverb = { path = "../stage-reverb" }
stage-dyn = { path = "../stage-dyn" }
stage-filter = { path = "../stage-filter" }
stage-mod = { path = "../stage-mod" }
stage-util = { path = "../stage-util" }
stage-nam = { path = "../stage-nam" }
stage-amp-head = { path = "../stage-amp-head" }
stage-amp-combo = { path = "../stage-amp-combo" }
stage-full-rig = { path = "../stage-full-rig" }
stage-cab = { path = "../stage-cab" }
