[package]
name = "project"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
domain = { path = "../domain" }
block-core = { path = "../block-core" }
block-gain = { path = "../block-gain" }
block-delay = { path = "../block-delay" }
block-reverb = { path = "../block-reverb" }
block-dyn = { path = "../block-dyn" }
block-filter = { path = "../block-filter" }
block-mod = { path = "../block-mod" }
block-util = { path = "../block-util" }
block-nam = { path = "../block-nam" }
block-amp-head = { path = "../block-amp-head" }
block-amp-combo = { path = "../block-amp-combo" }
block-full-rig = { path = "../block-full-rig" }
block-cab = { path = "../block-cab" }
