[package]
name = "project"
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
serde.workspace = true
domain = { path = "../domain" }
block-core = { path = "../block-core" }
block-gain = { path = "../block-gain" }
block-delay = { path = "../block-delay" }
block-reverb = { path = "../block-reverb" }
block-dyn = { path = "../block-dyn" }
block-filter = { path = "../block-filter" }
block-mod = { path = "../block-mod" }
block-util = { path = "../block-util" }
block-nam = { path = "../block-nam" }
block-preamp = { path = "../block-preamp" }
block-amp = { path = "../block-amp" }
block-full-rig = { path = "../block-full-rig" }
block-cab = { path = "../block-cab" }
block-body = { path = "../block-body" }
block-ir = { path = "../block-ir" }
block-wah = { path = "../block-wah" }
block-pitch = { path = "../block-pitch" }
