[package]
name = "setup"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
domain = { path = "../domain" }
stage-core = { path = "../stage-core" }
stage-delay-digital = { path = "../stage-delay-digital" }
stage-reverb-plate = { path = "../stage-reverb-plate" }
stage-dyn-compressor = { path = "../stage-dyn-compressor" }
stage-dyn-gate = { path = "../stage-dyn-gate" }
stage-filter-eq = { path = "../stage-filter-eq" }
stage-mod-tremolo = { path = "../stage-mod-tremolo" }
stage-util-tuner = { path = "../stage-util-tuner" }
stage-amp-nam = { path = "../stage-amp-nam" }
