[package]
name = "setup"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
domain = { path = "../domain" }
stage-core = { path = "../stage-core" }
stage-delay = { path = "../stage-delay" }
stage-reverb = { path = "../stage-reverb" }
stage-dyn = { path = "../stage-dyn" }
stage-filter = { path = "../stage-filter" }
stage-mod = { path = "../stage-mod" }
stage-util = { path = "../stage-util" }
stage-nam = { path = "../stage-nam" }
stage-amp = { path = "../stage-amp" }
stage-full-rig = { path = "../stage-full-rig" }
